[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/PONT.png" type="Texture" id=1]
[ext_resource path="res://scripts/ponte.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 274, 99.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 161.25, 99 )

[node name="ponte" type="Area2D"]
script = ExtResource( 2 )

[node name="ver" type="CollisionShape2D" parent="."]
position = Vector2( 539, -89.5 )
shape = SubResource( 2 )

[node name="ponta" type="StaticBody2D" parent="."]
position = Vector2( 0, 1 )

[node name="Sprite" type="AnimatedSprite" parent="ponta"]
position = Vector2( 533, -63 )
scale = Vector2( 1.88281, 1 )
frames = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ponta"]
build_mode = 1
polygon = PoolVector2Array( 294, -41, 293, -31, 464, -8, 514, -5, 568, -7, 774, -31, 772, -39, 569, -15, 513, -14, 465, -15, 305, -38 )

[node name="nowood" type="Timer" parent="."]

[node name="tira" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tira"]
position = Vector2( 542.75, -90 )
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_ponte_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ponte_body_exited"]
[connection signal="timeout" from="nowood" to="." method="_on_nowood_timeout"]
[connection signal="body_entered" from="tira" to="." method="_on_tira_body_entered"]
